--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/EDU/Library/Application Support/NetBeans/11.2/build.properties
+user.properties.file=C:\\Users\\jose\\AppData\\Roaming\\NetBeans\\11.2\\build.properties
